<resources>
    <!-- Label for the app name -->
    <string name="app_name">InventoryOne</string>

    <!-- Label for inserting dummy data -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for deleting all entries, which does nothing atm -->
    <string name="action_delete_all_entries">Destroy All Products</string>

    <!-- Label for deleting all entries, which does nothing atm -->
    <string name="supplier_unknown">Supplier Unknown</string>

    <!-- Label for deleting all entries, which does nothing atm -->
    <string name="number_unknown">Number Unknown</string>

    <!-- Figure everything out below this line!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->

    <!-- Title text for the empty view, which describes the image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">There\'s no products here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>
    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>
    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>
    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>
    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product updated</string>
    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>
    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this pet?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>
    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_inventory">Inventory</string>
    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier">Supplier</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>
    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_price">Price</string>
    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_quantity">Quantity</string>
    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_supplier_name">Supplier Name</string>
    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_supplier_number">Supplier Number</string>

</resources>
