<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!--Name Category-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Name Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_name" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- name field -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>

    <!-- Price category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Price Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_price" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_pet_breed"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_price"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>

    <!-- Inventory category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Inventory Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_inventory" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">
            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_product_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_quantity"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- inventory decrement button -->
                <Button
                    android:id="@+id/inventoryDown"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-" />
                <!-- inventory increment button -->
                <Button
                    android:id="@+id/inventoryUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="+" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier" />

        <!-- Supplier fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Supplier Name field -->
            <EditText
                android:id="@+id/edit_product_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_supplier_name"
                android:inputType="textCapWords" />

            <!-- Supplier Number field -->
            <EditText
                android:id="@+id/edit_product_supplier_number"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_supplier_number"
                android:inputType="number" />

            <Button
                android:id="@+id/callButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Call supplier" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
